--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["env"]
+  "presets": ["env"],
+  "plugins": [
+    "babel-plugin-transform-async-to-generator",
+    "syntax-async-functions"
+  ]
 }
