--- a/package.json
+++ b/package.json
@@ -6,29 +6,40 @@
   "author": "thomasbui93@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "dotenv": "^4.0.0",
     "fastify": "^0.27.0",
+    "fastify-formbody": "^1.0.1",
+    "fastify-multipart": "^0.2.0",
     "js-yaml": "^3.10.0",
+    "jsonwebtoken": "^8.0.1",
     "mongoose": "^4.11.11",
     "mongoose-beautiful-unique-validation": "^7.0.0",
     "mongoose-paginate": "^5.0.3",
     "mongoose-timestamp": "^0.6.0",
-    "mysql": "^2.14.1"
+    "multipart-read-stream": "^3.0.1",
+    "mysql": "^2.14.1",
+    "shortid": "^2.2.8"
   },
   "scripts": {
     "start": "node ./server-dist/app.js",
     "dev": "nodemon ./server/index.js -L",
     "lint-fix": "eslint server/**/**/*.js --fix",
-    "linter": "eslint server/**/**/*.js"
+    "linter": "eslint server/**/**/*.js",
+    "test": "mocha --recursive --compilers js:babel-core/register --require babel-polyfill -- server/test/**/*.js "
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2017": "^6.24.1",
     "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "eslint": "^4.6.1",
     "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-async-await": "^0.0.0",
     "eslint-plugin-node": "^5.1.1",
+    "mocha": "^3.5.3",
     "nodemon": "^1.12.0"
   },
   "engines": {
